Log maven output